...
              ],
            ),
            Column(
              mainAxisAlignment: MainAxisAlignment.spaceBetween,
              children: [
                FloatingActionButton(
                  key: const Key("EventButtonHome"),
                  heroTag: null,
                  backgroundColor: _tapped2
                      ? utilities.primaryColor
                      : utilities.tertiaryColor,
                  foregroundColor: utilities.secondaryColor,
                  onPressed: () async {
...
