...
  void Function(int)? onItemTapped;
  int selectedIndex;
  QuizScreenTablet({
    Key? key,
    required this.onItemTapped,
    required this.selectedIndex,
  }) : super(key: const Key("TabletQuizPage"));

  @override
  Widget build(BuildContext context) {
    ImageProvider mic = const AssetImage("assets/images/mic.jpg");
    ImageProvider singer = const AssetImage("assets/images/singer.jpg");
    ImageProvider concert = const AssetImage("assets/images/concert.jpg");
...
    ImageProvider sarabanda = const AssetImage("assets/images/sarabanda.jpg");

    List<Widget> trialGames = [
      Column(
        children: [
          GestureDetector(
            key: const Key("TabletGameA"),
            onTap: () => Navigator.push(
              context,
              ScaleRoute(
                page: GameInfoPageTablet(selectedGame: "A"),
              ),
            ),
...
