...

int limit = quiz_utils.limit;

class QuizPage extends StatefulWidget {
  String selectedMode;

  QuizPage({
    required this.selectedMode,
    Key? key,
  }) : super(key: const Key("QuizLogicPage"));

  @override
  State<StatefulWidget> createState() {
    return _QuizPageState();
  }
}
...
